@@ -2,6 +2,7 @@ Version 2.14 ->
 --------------------
  - improved JCC build on Linux by mokey patching setuptools (Caleb Burns)
  - fixed bug with wrapping arrays coming out of generic iterators
+ - added support for wrapping non-public methods by listing them as class:method
  - 
 
 Version 2.13 -> 2.14
